--- a/src/index.css
+++ b/src/index.css
@@ -87,9 +87,9 @@
     @apply bg-background text-foreground;
   }
   .editor-btn {
-    @apply flex items-center justify-center w-8 h-8 rounded-md 
-         text-muted-foreground transition-colors
-         hover:bg-gray-100/40 dark:hover:bg-white/5;
+    @apply flex items-center justify-center size-7 rounded-md 
+         text-muted-foreground transition-colors cursor-pointer
+         hover:bg-white/5 hover:text-white;
   }
 
   .editor-icon {
@@ -101,7 +101,7 @@
   }
 
   .ProseMirror {
-    @apply outline-none w-full;
+    @apply outline-none w-full transition-all duration-150;
   }
 
   .ProseMirror p.is-editor-empty:first-child::after {
@@ -138,8 +138,8 @@
     @apply italic;
   }
 
-  .ProseMirror code {
-    @apply font-mono bg-gray-100 dark:bg-gray-800 px-1 rounded;
+  .ProseMirror pre {
+    @apply font-mono bg-gray-600 px-1  rounded-md;
   }
 
   p:empty::after {
